# based-synth

./: Cargo.toml  package-lock.json  package.json
history/: session_1779772416.jsonl  session_1779775457.jsonl
patches/: ANGST_LAND.json  ANNOYING_ORANGE.json  BASED_PATCH.json  BASED_PATCH2.json  BASED_PATCH3.json  BASED_PATCH4.json  DISCO_CONCERTING.json  DRONE.json  DRONE2.json  ECHO_PIANO.json  EVIL_TONE.json  FEELING_HORN.json  Lords_of_foxtown.json  MIDTOWN.json  MOETOWN_HOEDOWN.json  NICE_ONE.json  PUMP_UP_THE_JAM.json  SAD_WARNING.json  SAD_WARNING_2.json  STRANGELY_OPERATIC.json  Scary_noises.json  Schizo_tom_and_jerry.json  Skeleton_mansion.json  Skeleton_mansion2.json  Skeleton_mansion3.json  Skeleton_mansion4.json  UNDERWATER.json  UNDERWATER2.json  UNDERWATER3.json  UPWARD_BASS.json  WET_FOOTSTEPS.json  WET_FOOTSTEPS2.json  WIDE.json  WIDE2.json  WIDE3.json  WUBZ.json  YUNG_MONGOLZ.json  aaa.json  acid_lead.json  arp_house.json  (+14 more)
src/: effects.rs  main.rs  params.rs  performance.rs  synth.rs  web.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/: allow-dispatch.toml
src-tauri/src/: commands.rs  effects.rs  history.rs  ipc.rs  lib.rs  main.rs  params.rs  performance.rs  synth.rs
static/: index.html
